--- a/metachan-source/irc.html
+++ b/metachan-source/irc.html
@@ -26,7 +26,7 @@
  <br>
  <br>
  <br>
- <iframe width="650" height="650" scrolling="no" src="http://widget.mibbit.com/?settings=6b99925740cef680bd1e04b8518f5fd5&server=irc.mibbit.net%3A%2B6697&channel=%23metachan_irc69_test"></iframe>
+<iframe src="https://kiwiirc.com/client/vervet.foonetic.net/?nick=kiwiuser|?&theme=cli#metachan" style="border:0; width:100%; height:450px;"></iframe>
 
 </body>
 </html>
