--- a/metachan-source/irc.html
+++ b/metachan-source/irc.html
@@ -4,10 +4,17 @@
 <head>
   <meta charset="utf-8">
  <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>metachan</title>
+  <title>metachan - irc</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8252023174459540",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body>
@@ -16,7 +23,7 @@
  <a class="links" href="index.html">home</a>
 <br>
 <br>
- <p class="subtitle">welcome to the metachan irc</p>
+ <p class="header">welcome to the metachan irc</p>
  <ol>
    <li class="ircsteps">click foonetic</li>
    <li>register your username with email: /msg NickServ REGISTER password youremail@example.com</li>
@@ -26,7 +33,7 @@
  <br>
  <br>
  <br>
-<iframe src="https://kiwiirc.com/client/vervet.foonetic.net/?nick=kiwiuser|?&theme=cli#metachan" style="border:0; width:100%; height:450px;"></iframe>
+<iframe src="https://kiwiirc.com/client/vervet.foonetic.net/?nick=kiwiuser|?&theme=cli#metachan" style="border:0; width:100%; height:625px;"></iframe>
 
 </body>
 </html>
