--- a/metachan-source/index.html
+++ b/metachan-source/index.html
@@ -4,10 +4,17 @@
 <head>
   <meta charset="utf-8">
  <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>metachan</title>
+  <title>metachan - home</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8252023174459540",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body>
