--- a/metachan-source/index.html
+++ b/metachan-source/index.html
@@ -25,7 +25,10 @@
  <br>
  <br>
 <p class="links">coming soon...</p>
-
+<br>
+<br>
+<br>
+<a class="links" href="https://github.com/metachansite/metachansource">want the source code?</a>
 
 </body>
 </html>
