--- a/irc.html
+++ b/irc.html
@@ -18,22 +18,39 @@
 </head>
 
 <body>
-<p class="workmark"><em><b>meta</b></em>chan </p>
- <p class="subtitle">go beyond.</p>
- <a class="links" href="index.html">home</a>
-<br>
-<br>
- <p class="header">welcome to the metachan irc</p>
- <ol>
-   <li class="ircsteps">click foonetic</li>
-   <li>register your username with email: /msg NickServ REGISTER password youremail@example.com</li>
-   <li>type /join #metachan</li>
-   <li>enjoy</li>
- </ol>
- <br>
- <br>
- <br>
-<iframe src="https://kiwiirc.com/client/vervet.foonetic.net/?nick=kiwiuser|?&theme=cli#metachan" style="border:0; width:100%; height:625px;"></iframe>
+  <div class="wrapper">
+    <header>
+      <p class="workmark"><em><b>meta</b></em>chan </p>
+       <p class="subtitle">go beyond.</p>
+    </header>
+  <nav>
+    <a class="links" href="index.html">home</a>
+  </nav>
+  <br>
+  <br>
+  <article class="content">
+    <p class="header">welcome to metachan irc</p>
+    <ol>
+      <li>make a username</li>
+      <li>click join</li>
+      <li>register your username with email: /msg nickserv register password youremail@example.com</li>
+      <li>enjoy</li>
+    </ol>
+    <br>
+    <br>
+    <br>
+    <iframe src="https://kiwiirc.com/client/vervet.foonetic.net/?nick=kiwiuser|?&theme=cli#metachan" style="border:0; width:100%; height:625px;"></iframe>
+  </article>
+  <footer>
+    <a class="links" href="https://github.com/metachansite/metachansource">want the source code?</a>
+  </footer>
+  </div>
+
+
+
+
+
+
 
 </body>
 </html>
