--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
        <p class="subtitle">go beyond.</p>
       </header>
       <nav>
+        <a class="links" href="index.html">home</a>
         <a class="links" href="irc.html">irc</a>
       </nav>
       <br>
