--- a/irc.html
+++ b/irc.html
@@ -25,6 +25,7 @@
     </header>
   <nav>
     <a class="links" href="index.html">home</a>
+    <a class="links" href="irc.html">irc</a>
   </nav>
   <br>
   <br>
