--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <br>
       <br>
       <br>
-      <article class="contnet">
+      <article class="content">
         <p class="links">coming soon...</p>
       </article>
       <br>
