--- a/metachan-source/index.html
+++ b/metachan-source/index.html
@@ -16,19 +16,29 @@
   });
 </script>
 </head>
-
 <body>
- <p class="workmark"><em><b>meta</b></em>chan </p>
-<p class="subtitle">go beyond.</p>
-<a class="links" href="irc.html">irc</a>
- <br>
- <br>
- <br>
-<p class="links">coming soon...</p>
-<br>
-<br>
-<br>
-<a class="links" href="https://github.com/metachansite/metachansource">want the source code?</a>
-
+  <div class="wrapper">
+      <header>
+        <p class="workmark"><em><b>meta</b></em>chan </p>
+       <p class="subtitle">go beyond.</p>
+      </header>
+      <nav>
+        <a class="links" href="index.html">home</a>
+        <a class="links" href="irc.html">irc</a>
+        <a class="links" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">free vbucks</a>
+      </nav>
+      <br>
+      <br>
+      <br>
+      <article class="content">
+        <p class="links">coming soon...</p>
+      </article>
+      <br>
+      <br>
+      <br>
+    <footer>
+      <a class="links" href="https://github.com/metachansite/metachansource">want the source code?</a>
+    </footer>
+  </div>
 </body>
 </html>
