--- a/irc.html
+++ b/irc.html
@@ -26,6 +26,7 @@
   <nav>
     <a class="links" href="index.html">home</a>
     <a class="links" href="irc.html">irc</a>
+    <a class="links" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">free vbucks</a>
   </nav>
   <br>
   <br>
